--- a/backend_dragons/src/main/resources/application.properties
+++ b/backend_dragons/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.host=mongodb://mongo:MdiX61bxjqB7ZLmCYkYq@containers-us-west-167.railway.app
+spring.data.mongodb.port=6823
 spring.data.mongodb.database=dragonsbase
