modificação no URL do MongoDB

--- a/backend_dragons/src/main/resources/application.properties
+++ b/backend_dragons/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-spring.data.mongodb.host=//mongo:MdiX61bxjqB7ZLmCYkYq@containers-us-west-167.railway.app:6823
+spring.data.mongodb.host=//mongo:MdiX61bxjqB7ZLmCYkYq@containers-us-west-167.railway.app
+spring.data.mongodb.port=6823
 spring.data.mongodb.database=dragonsbase
+server.port=8080
