arrumando conexão com MongoDB

--- a/backend_dragons/src/main/resources/application.properties
+++ b/backend_dragons/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.data.mongodb.host=mongodb://mongo:MdiX61bxjqB7ZLmCYkYq@containers-us-west-167.railway.app:6823
+spring.data.mongodb.port=
 spring.data.mongodb.database=dragonsbase
