arrumando conexão com MongoDB

--- a/backend_dragons/src/main/resources/application.properties
+++ b/backend_dragons/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.data.mongodb.host=mongodb://mongo:MdiX61bxjqB7ZLmCYkYq@containers-us-west-167.railway.app
-spring.data.mongodb.port=6823
+spring.data.mongodb.host=mongodb://mongo:EY6n2kvDjXTFXqXutbQe@containers-us-west-175.railway.app
+spring.data.mongodb.port=5807
 spring.data.mongodb.database=dragonsbase
+server.port=8081
