arrumando conexão com MongoDB

--- a/backend_dragons/src/main/resources/application.properties
+++ b/backend_dragons/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.data.mongodb.host=mongodb://mongo:EY6n2kvDjXTFXqXutbQe@containers-us-west-175.railway.app
+spring.data.mongodb.host=containers-us-west-175.railway.app
 spring.data.mongodb.port=5807
-spring.data.mongodb.database=dragonsbase
+spring.data.mongodb.database=mongodb://${{ MONGOUSER }}:${{ MONGOPASSWORD }}@${{ MONGOHOST }}:${{ MONGOPORT }}
+spring.data.mongodb.username=mongo
+spring.data.mongodb.password=EY6n2kvDjXTFXqXutbQe
 server.port=8081
