arrumando conexão com MongoDB

--- a/backend_dragons/src/main/resources/application.properties
+++ b/backend_dragons/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.data.mongodb.host=containers-us-west-175.railway.app
 spring.data.mongodb.port=5807
 spring.data.mongodb.username=mongo
+spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.password=EY6n2kvDjXTFXqXutbQe
+spring.data.mongodb.database=dragonsbase
 server.port=8081
