Adicionando config do CORS

--- a/frontend_dragons/package.json
+++ b/frontend_dragons/package.json
@@ -1,14 +1,11 @@
 {
   "dependencies": {
     "axios": "^1.2.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.20"
-  }
-,
+  },
   "scripts": {
     "start": "node WebServer.js"
   }
 }
-
-
-
