--- a/frontend_dragons/package.json
+++ b/frontend_dragons/package.json
@@ -6,6 +6,7 @@
     "nodemon": "^2.0.20"
   },
   "scripts": {
-    "start": "node WebServer.js"
+    "start": "node WebServer.js",
+    "build": "npm install"
   }
 }
