--- a/backend_dragons/src/main/resources/application.properties
+++ b/backend_dragons/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.data.mongodb.host=containers-us-west-175.railway.app
-spring.data.mongodb.port=5807
-spring.data.mongodb.username=mongo
+spring.data.mongodb.host=${MONGOHOST}
+spring.data.mongodb.port=${MONGOPORT}
+spring.data.mongodb.username=${MONGOUSER}
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.password=${MONGOPASSWORD}
 spring.data.mongodb.database=dragonsbase
