--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "nodemon": "^2.0.20"
   },
   "scripts": {
-    "start": "nodemon WebServer.js",
+    "start": "node WebServer.js",
     "build": "npm install"
   }
 }
